Backlink to related challenges in challenge card
If a challenge is related to other challenges, its relatives are shown
with anchor links in the challenge card.

--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -120,7 +120,19 @@
                         </ul>
                     </div>
                 {% endif %}
-              
+
+                {% if challenge.container.related %}
+                    <!-- Related challenge backlinks -->
+                    <div class="files">
+                        <h3>Related</h3>
+                        <ul>
+                            {% for related_id in challenge.container.related %}
+                                <li><a href="#{{ related_id | challenge_anchor_id }}">{{ challenges[related_id].name }}</a></li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                {% endif %}
+
                 <footer>
                     {% if solves[id] %}
                         <details class="solves-count">
