--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -15,6 +15,9 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js" defer></script>
     <!-- as lazy as normal alerts, better than you could make them yourself -->
 
+    <script src="https://unpkg.com/@popperjs/core@2" defer></script>
+    <script src="https://unpkg.com/tippy.js@6" defer></script>
+
     <script src="{{ url_for('static', filename='js/challenges.js') }}" defer></script>
 {% endblock %}
 
