Use Tippy.js on the leaderboard
This allows better visibility of the meaning of the trophy icon (first
blood) with a tooltip. We wrap the emoji in a `<span>` to ensure correct
positioning of the tooltip.

--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css"/>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js" defer></script>
 
+    <script src="https://unpkg.com/@popperjs/core@2" defer></script>
+    <script src="https://unpkg.com/tippy.js@6" defer></script>
 
 
     <!-- Chart.js 3.5.1 with date-fns adapter -->
