Add absolute time tooltips on the solves page

--- a/templates/solves.html
+++ b/templates/solves.html
@@ -22,6 +22,7 @@
     <script src="https://unpkg.com/@popperjs/core@2" defer></script>
     <script src="https://unpkg.com/tippy.js@6" defer></script>
 
+    <script src="{{ url_for('static', filename='js/utils.js') }}" defer></script>
     <script src="{{ url_for('static', filename='js/solves.js') }}" defer></script>
 {% endblock %}
 
