Reword total player points (accrued) statistic

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
                 <li>{{ stats["challenges"] }} challenges</li>
                 <li>{{ stats["solves"] }} solves</li>
                 <li>{{ stats["players"] }} players</li>
-                <li>{{ stats["points"]["accrued"] }} points (accrued)</li>
+                <li>{{ stats["points"]["accrued"] }} total player points</li>
                 <li>{{ stats["points"]["available"] }} points (available)</li>
             </ul>
         </section>
