Show 'first blood' solves in profile solves table

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -37,6 +37,7 @@
                 <thead>
                     <tr>
                         <th>Challenge</th>
+                        <th></th>
                         <th>Category</th>
                         <th>Difficulty</th>
                         <th>Points</th>
@@ -47,6 +48,7 @@
                     {% for solve in solves %}
                     <tr>
                         <td><a href="{{ url_for('challenges') }}#{{ solve.challenge_id | challenge_anchor_id }}">{{ solve.challenge.name }}</a></td>
+                        <td>{% if solve.first_blood %}<span title="First blood">🏆</span>{% endif %}</td>
                         <td>{{ solve.challenge.category }}</td>
                         <td>{{ solve.challenge.difficulty }}</td>
                         <td>{{ solve.challenge.points }}</td>
