--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,9 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js" defer></script>
     <!-- as lazy as normal alerts, better than you could make them yourself -->
 
+    <script src="https://unpkg.com/@popperjs/core@2" defer></script>
+    <script src="https://unpkg.com/tippy.js@6" defer></script>
+
     <script src="{{ url_for('static', filename='js/index.js') }}" defer></script>
 {% endblock %}
 
@@ -88,8 +91,8 @@
 
                             <div class="info-block">
                                 <div class="filter-tags">
-                                    <a class="filter-tag" href="javascript:void(0);" id="difficulty-tag" title="Filter by difficulty">easy</a>
-                                    <a class="filter-tag" href="javascript:void(0);" id="category-tag" title="Filter by category">category</a>
+                                    <a class="filter-tag" href="javascript:void(0);" id="difficulty-tag" data-tippy-content="Filter by difficulty">easy</a>
+                                    <a class="filter-tag" href="javascript:void(0);" id="category-tag" data-tippy-content="Filter by category">category</a>
                                 </div>
                                 <p class="points">20 points</p>
                             </div>
