Added admin account that's created on startup

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -17,10 +17,15 @@
 {% block body %}
     <section id="user-profile-card">
         <h2 id="username-heading">{{ displayed_user.username }}</h2>
+        {% if not admin %}
         <h2>Rank {{ rank }}</h2>
         <h2>{{ score }} Points</h2>
+        {% else %}
+        <h2>This user is an admin</h2>
+        {% endif %}
     </section>
 
+    {% if not admin %}
     {{ charts.chart("score-history", True, False) }}
 
     <section class="card" id="recent-solves">
@@ -55,4 +60,5 @@
             <p>No solves yet :(</p>
         {% endif %}
     </section>
+    {% endif %}
 {% endblock %}
