--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,6 +14,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js" defer></script>
 
+    <!-- chartjs-plugin-zoom 2.0.1 with Hammer.js 2.0.8 (gesture recognition) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js" integrity="sha512-UXumZrZNiOwnTcZSHLOfcTs0aos2MzBWHXOHOuB0J/R44QB0dwY5JgfbvljXcklVf65Gc4El6RjZ+lnwd2az2g==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-zoom/2.0.1/chartjs-plugin-zoom.min.js" integrity="sha512-wUYbRPLV5zs6IqvWd88HIqZU/b8TBx+I8LEioQ/UC0t5EMCLApqhIAnUg7EsAzdbhhdgW07TqYDdH3QEXRcPOQ==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
+
     <script src="{{ url_for('static', filename='js/utils.js') }}" defer></script>
     <script data-username="{{ displayed_user.username }}" data-datapoints='{{ graph_datapoints|tojson }}'
         src="{{ url_for('static', filename='js/profile.js') }}" defer></script>
@@ -24,6 +28,10 @@
         <h2 id="username-heading">{{ displayed_user.username }}</h2>
         <h2>Rank {{ rank }}</h2>
         <h2>{{ score }} Points</h2>
+        <div>
+            <p>Drag/pinch, or hold shift and use mouse wheel/drag to zoom/pan</p>
+            <button class="reset-zoom" onclick="resetChartZoom()">Reset Zoom</button>
+        </div>
     </section>
 
     <div id="chart-container">
