Add fullscreen support for leaderboard chart
This feature is useful for big screen visualisation of CTF progress.

--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -32,6 +32,7 @@
     <div>
         <p>Drag/pinch, or hold shift and use mouse wheel/drag to zoom/pan</p>
         <button class="reset-zoom" onclick="resetChartZoom()">Reset Zoom</button>
+        <button class="reset-zoom" onclick="fullscreenChart()">Fullscreen</button>
     </div>
     <div id="leaderboard-chart-container">
         <canvas id="leaderboard-chart"></canvas>
