--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -34,7 +34,7 @@
         <button class="reset-zoom" onclick="resetChartZoom()">Reset Zoom</button>
         <button class="reset-zoom" onclick="fullscreenChart()">Fullscreen</button>
     </div>
-    <div id="leaderboard-chart-container">
+    <div id="chart-container">
         <canvas id="leaderboard-chart"></canvas>
     </div>
     <div class="dashboard-container">
