--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -174,6 +174,13 @@ div.chart-toolbar {
     position: absolute;
     top: 0;
     right: 0;
+
+    opacity: 0.1;
+    transition: opacity 0.3s ease;
+}
+
+div.chart-toolbar:hover {
+    opacity: 1;
 }
 
 div#chart-container {
