--- a/templates/profile.html
+++ b/templates/profile.html
@@ -33,7 +33,8 @@
 
     <div id="chart-container">
         <div class="chart-toolbar">
-            <button onclick="resetChartZoom()">Reset Zoom</button>
+            {# hardcoded width and height prevents resizing when SVGs are loaded #}
+            <button onclick="resetChartZoom()" title="Reset zoom"><object data="{{ url_for('static', filename='images/zoom--fit.svg') }}" type="image/svg+xml" width="32" height="32"></object></button>
         </div>
         <canvas id="score-history"></canvas>
     </div>
