--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -1,3 +1,4 @@
+{% import 'icons.html' as icons %}
 {% extends "base.html" %}
 {% block title %}Leaderboard{% endblock %}
 
@@ -33,12 +34,10 @@
     <p>Drag/pinch, or hold shift and use mouse wheel/drag to zoom/pan</p>
     <div id="chart-container">
         <div class="chart-toolbar">
-            {# hardcoded width and height prevents resizing when SVGs are loaded #}
-            {# SVGs from https://carbondesignsystem.com/elements/icons/library #}
-            <button onclick="resetChartZoom()" title="Reset zoom"><object data="{{ url_for('static', filename='images/zoom--fit.svg') }}" type="image/svg+xml" width="32" height="32"></object></button>
+            <button onclick="resetChartZoom()" title="Reset zoom">{{ icons.zoom__fit() }}</button>
             <button onclick="fullscreenChart()" title="Fullscreen chart">
-                <object id="maximize-icon" data="{{ url_for('static', filename='images/maximize.svg') }}" type="image/svg+xml" width="32" height="32"></object>
-                <object id="minimize-icon" data="{{ url_for('static', filename='images/minimize.svg') }}" type="image/svg+xml" width="32" height="32" style="display: none;"></object>
+                {{ icons.maximize('id="maximize-icon"') }}
+                {{ icons.minimize('id="minimize-icon" style="display: none;"') }}
             </button>
         </div>
         <canvas id="leaderboard-chart"></canvas>
