--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -175,6 +175,11 @@ div.chart-toolbar {
     top: 0;
     right: 0;
 
+    display: flex;
+    flex-wrap: wrap;
+    width: 15%;
+    justify-content: flex-end; /* right align toolbar icons if wrapped */
+
     opacity: 0.1;
     transition: opacity 0.3s ease;
 }
