--- a/templates/solves.html
+++ b/templates/solves.html
@@ -19,6 +19,7 @@
         }
     </style>
 
+    <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/dist/svg-arrow.css" />
     <script src="https://unpkg.com/@popperjs/core@2" defer></script>
     <script src="https://unpkg.com/tippy.js@6" defer></script>
 
