--- a/templates/profile.html
+++ b/templates/profile.html
@@ -9,10 +9,7 @@
     <script src="https://unpkg.com/@popperjs/core@2" defer></script>
     <script src="https://unpkg.com/tippy.js@6" defer></script>
 
-    <!-- Chart.js 3.5.1 with date-fns adapter -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.js" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js" defer></script>
+    <script src="https://cdn.plot.ly/plotly-2.32.0.min.js" charset="utf-8"></script>
 
     <script src="{{ url_for('static', filename='js/utils.js') }}" defer></script>
     <script data-username="{{ displayed_user.username }}" data-datapoints='{{ graph_datapoints|tojson }}'
@@ -26,9 +23,7 @@
         <h2>{{ score }} Points</h2>
     </section>
 
-    <div id="chart-container">
-        <canvas id="score-history"></canvas>
-    </div>
+    <div id="chart-container"></div>
 
     <section class="card" id="recent-solves">
         <h2>Solves</h2>
