Refactor template dependencies
Dependencies required for the platform's frontend, such as SweetAlert2,
Tippy.js and Chart.js are now centralised in one file, thereby
significantly reducing code duplication.

--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -3,6 +3,7 @@
         {{ caller() }}
     {% endif %}
 {%- endmacro %}
+{% import 'dependencies.html' as dependencies %}
 {% import 'icons.html' as icons %}
 {% extends "base.html" %}
 {% block title %}Challenges{% endblock %}
@@ -11,14 +12,7 @@
     {{ super() }}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/challenges.css') }}">
 
-    <!-- Sweet alert -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css"/>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js" defer></script>
-    <!-- as lazy as normal alerts, better than you could make them yourself -->
-
-    <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/dist/svg-arrow.css" />
-    <script src="https://unpkg.com/@popperjs/core@2" defer></script>
-    <script src="https://unpkg.com/tippy.js@6" defer></script>
+    {{ dependencies.head(sweetalert2=True, tippy=True) }}
 
     <script src="{{ url_for('static', filename='js/utils.js') }}" defer></script>
     <script src="{{ url_for('static', filename='js/challenges.js') }}" defer></script>
