--- a/templates/index.html
+++ b/templates/index.html
@@ -113,6 +113,6 @@
     </div>
 
     <footer>
-        <p>©Ning, Alex, Andrew, 2024 <a href="https://github.com/SaintNong/SaintCTF/" style="position: absolute; right: 1em;">Source</a></p>
+        <p>©Ning, Alex, Andrew, 2024 <a href="https://github.com/SaintNong/SaintCTF/" id="footer-src-link">Source</a></p>
     </footer>
 {% endblock %}
