Show loading toast on leaderboard page
Whilst waiting for server-sent events to fill leaderboard data, we
display a loading toast to the user to indicate the page's status.

--- a/static/css/leaderboard.css
+++ b/static/css/leaderboard.css
@@ -51,3 +51,8 @@ main {
 #leaderboard-heading {
     text-align: center;
 }
+
+/* https://github.com/sweetalert2/sweetalert2/issues/2508#issuecomment-1263293979 (prevent toast from being dismissed) */
+.swal2-close.toast-hidden {
+    display: none !important;
+}
