Add solve breakdown chart on profile page
A doughnut chart of a user's solves broken down by category and
difficulty is now displayed on their profile page. The legend
dynamically moves to the top of the chart if the screen has an aspect
ratio taller than 4:3.

We now send category and difficulty information in
`get_user_profile_graph()`.

--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -184,7 +184,7 @@
         </div>
 
         <div class="view" id="challenge-chart-view" style="display: none;">
-            {{ charts.chart("challenges-chart", True) }}
+            {{ charts.chart("challenges-chart", True, True) }}
         </div>
     </section>
 {% endblock %}
