--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -16,7 +16,7 @@
 {% block body %}
     <h2 id="leaderboard-heading">Top 10 scores over time</h2>
 
-    {{ charts.chart("leaderboard-chart", True) }}
+    {{ charts.chart("leaderboard-chart", True, True) }}
 
     <div class="dashboard-container">
         <section id="leaderboard-section" class="card dashboard-panel">
