--- a/templates/profile.html
+++ b/templates/profile.html
@@ -21,7 +21,7 @@
         <h2>{{ score }} Points</h2>
     </section>
 
-    {{ charts.chart("score-history", False) }}
+    {{ charts.chart("score-history", True, False) }}
 
     <section class="card" id="recent-solves">
         <h2>Solves</h2>
@@ -50,6 +50,7 @@
                     {% endfor %}
                 </tbody>
             </table>
+            {{ charts.chart("solve-chart", False, False) }}
         {% else %}
             <p>No solves yet :(</p>
         {% endif %}
