--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -18,7 +18,7 @@ main {
     padding-bottom: var(--spacing);
 }
 
-#recent-solves #chart-container {
+#recent-solves .chart-container {
     padding-top: 2em;
 }
 
