Added admin panel that lets admins ban users

--- a/templates/rules.html
+++ b/templates/rules.html
@@ -6,7 +6,7 @@
         <h1>Rulez</h1>
         <article class="rules">
             <ol>
-                <li>Please don't attack the infrastructure (i.e. Ning's computer), that would make him sad.</li>
+                <li>Please don't attack the infrastructure (i.e. The IT guys' server), that would make him sad.</li>
                 <li>DO NOT DDOS THE WEBSITE.</li>
                 <li>Scanning and brute force tools are not required to solve a challenge unless explicitly stated so.</li>
                 <li>If you are stuck, I hereby give you permission to annoy Andrew about it.</li>
